Add CSS extraction

--- a/spa/client/index.html
+++ b/spa/client/index.html
@@ -8,6 +8,11 @@
   <link rel="manifest" href="/manifest.json">
   <link rel="shortcut icon" href="/favicon.ico">
   <title>React App</title>
+  <style>
+    body {
+      margin: 0;
+    }
+  </style>
 </head>
 
 <body>
