--- a/spa/client/index.html
+++ b/spa/client/index.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#000000">
   <link rel="manifest" href="/manifest.json">
   <link rel="shortcut icon" href="/favicon.ico">
-  <title>React App</title>
+  <title>Peerigon News</title>
   <style>
     * {
       margin: 0;
