--- a/universal/app/index.html
+++ b/universal/app/index.html
@@ -7,13 +7,11 @@
   <meta name="theme-color" content="#000000" />
   <link rel="manifest" href="/manifest.json" />
   <link rel="shortcut icon" href="/favicon.ico" />
-  <title>Peerigon News</title>
+  <%- head %>
 </head>
 
 <body>
-  <noscript>
-    You need to enable JavaScript to run this app.
-  </noscript>
+  <%- body %>
 </body>
 
 </html>
